# zlisp

./: .gitignore  README.md
.github/workflows/: check.yaml
crates/zlisp-bin/: Cargo.toml
crates/zlisp-bin/src/: ascii.rs  constants.rs  error.rs  lib.rs
crates/zlisp-bin/src/reader/: mod.rs
crates/zlisp-bin/src/reader/slice_reader/: de.rs  mod.rs  private.rs
crates/zlisp-bin/src/writer/: mod.rs
crates/zlisp-bin/src/writer/io_writer/: private.rs  ser.rs
crates/zlisp-bin/tests/integration/: any.rs  bin_builder.rs  from_slice_de_tests.rs  from_slice_parse_tests.rs  main.rs  round_trip_tests.rs  to_vec_ser_tests.rs
crates/zlisp-hex/: Cargo.toml
crates/zlisp-hex/src/: lib.rs
crates/zlisp-hex/tests/integration/: main.rs
crates/zlisp-text/: Cargo.toml  error.rs
crates/zlisp-text/src/: ascii.rs  constants.rs  error.rs  lib.rs
crates/zlisp-text/src/foo/text/pretty/: mod.rs
crates/zlisp-text/src/reader/: mod.rs
crates/zlisp-text/src/reader/parse/: mod.rs  tests.rs
crates/zlisp-text/src/reader/str_reader/: de.rs  mod.rs
crates/zlisp-text/src/reader/str_reader/private/: mod.rs  tests.rs
crates/zlisp-text/src/reader/tokenizer/: mod.rs
crates/zlisp-text/src/writer/: config.rs  mod.rs  ser_common.rs
crates/zlisp-text/src/writer/pretty_writer/: mod.rs  private.rs  ser.rs
crates/zlisp-text/src/writer/string_writer/: mod.rs  private.rs  ser.rs
crates/zlisp-text/tests/integration/: from_str_de_tests.rs  main.rs  round_trip_tests.rs  string_quoting_tests.rs  structs.rs  to_pretty_fmt_tests.rs  to_pretty_ser_tests.rs  to_string_ser_tests.rs
crates/zlisp-util/: Cargo.toml
crates/zlisp-util/src/: main.rs
crates/zlisp-value/: Cargo.toml
crates/zlisp-value/src/: lib.rs
crates/zlisp-value/src/value/: de.rs  display.rs  from.rs  mod.rs  ser.rs
crates/zlisp-value/tests/integration/: debug.rs  display.rs  main.rs  serde.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bin_from_slice.rs
