[package]
name = "zlisp-fuzz"
version = "0.1.0"
authors = ["Toby Fleming <tobywf@users.noreply.github.com>"]
edition = "2021"
license = "EUPL-1.2"
publish = false

autoexamples = false
autobenches = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

zlisp-bin = { path = "../crates/zlisp-bin" }
zlisp-text = { path = "../crates/zlisp-text" }
zlisp-value = { path = "../crates/zlisp-value" }

[[bin]]
name = "bin_from_slice"
path = "fuzz_targets/bin_from_slice.rs"

# Prevent this from interfering with workspaces
[workspace]
