[package]
name = "zlisp-text"
version = "0.1.0"
authors = ["Toby Fleming <tobywf@users.noreply.github.com>"]
edition = "2021"
description = "Text serialization and deserialization of zlisp"
readme = "README.md"
license = "EUPL-1.2"
repository = "https://github.com/TerranMechworks/zlisp"

autoexamples = false
autobenches = false

[lib]
doctest = false

[dependencies]
serde = "1.0.136"

[dev-dependencies]
serde_derive = "1.0.136"
# test-case = "2.0.0"
assert_matches = "1.5.0"
